--- a/pages/components.html
+++ b/pages/components.html
@@ -74,12 +74,12 @@ permalink: /components
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect js_pmx-selector--changeIcons">
         <div class="pmx-selector__value">
           <div class="pmx-selector__block">
-            <span class="pmx-selector__blockPrefix">−</span>
+            <span class="pmx-selector__blockField">-</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__block">
-            <span class="pmx-selector__blockPrefix">ބ</span>
+            <span class="pmx-selector__blockField">ބ</span>
           </div>
         </div>
       </div>
@@ -141,7 +141,7 @@ permalink: /components
       <div class="pmx-selector pmx-selector--readonly">
         <div class="pmx-selector__value">
           <div class="pmx-selector__block">
-            <span class="pmx-selector__blockPrefix">−</span>
+            <span class="pmx-selector__blockPrefix">-</span>
             <span class="pmx-selector__blockLabel">Contain</span>
             <span class="pmx-selector__blockField">Field</span>
           </div>
@@ -186,8 +186,7 @@ permalink: /components
   </div>
 </div>
 
-
-
+<div class="devgrid"></div>
 
 {% include popups/multiSelector1.html %}
 {% include popups/multiSelector3.html %}
