--- a/pages/components.html
+++ b/pages/components.html
@@ -72,14 +72,14 @@ permalink: /components
     <div class="field__label">Unselectable Single Select - expanded</div>
     <div class="field__value">
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect js_pmx-selector--changeIcons">
-        <div class="pmx-selector__value">
+        <div class="pmx-selector__item">
           <div class="pmx-selector__block">
-            <span class="pmx-selector__blockField">-</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">-</span>
           </div>
         </div>
-        <div class="pmx-selector__value pmx-selector__value--selected">
+        <div class="pmx-selector__item pmx-selector__item--selected">
           <div class="pmx-selector__block">
-            <span class="pmx-selector__blockField">ބ</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ބ</span>
           </div>
         </div>
       </div>
@@ -92,14 +92,14 @@ permalink: /components
     <div class="field__label">Tablet view selector ܐ Unselectable Single Select - expanded</div>
     <div class="field__value">
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
-        <div class="pmx-selector__value">
+        <div class="pmx-selector__item">
           <div class="pmx-selector__block">
-            <span class="pmx-selector__blockField">ध</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ध</span>
           </div>
         </div>
-        <div class="pmx-selector__value pmx-selector__value--selected">
+        <div class="pmx-selector__item pmx-selector__item--selected">
           <div class="pmx-selector__block">
-            <span class="pmx-selector__blockField">द</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">द</span>
           </div>
         </div>
       </div>
@@ -112,20 +112,20 @@ permalink: /components
     <div class="field__label">Mobile view selector ܐ Single Select - Expanded</div>
     <div class="field__value">
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
-        <div class="pmx-selector__value">
+        <div class="pmx-selector__item">
           <div class="pmx-selector__block">
-            <span class="pmx-selector__blockField">ध</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ध</span>
           </div>
         </div>
-        <div class="pmx-selector__value">
+        <div class="pmx-selector__item">
           <div class="pmx-selector__block">
-            <span class="pmx-selector__blockField">च</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">च</span>
           </div>
         </div>
 
-        <div class="pmx-selector__value pmx-selector__value--selected">
+        <div class="pmx-selector__item pmx-selector__item--selected">
           <div class="pmx-selector__block">
-            <span class="pmx-selector__blockField">द</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">द</span>
           </div>
         </div>
       </div>
@@ -139,11 +139,11 @@ permalink: /components
     <div class="field__value">
 
       <div class="pmx-selector pmx-selector--readonly">
-        <div class="pmx-selector__value">
+        <div class="pmx-selector__item">
           <div class="pmx-selector__block">
-            <span class="pmx-selector__blockPrefix">-</span>
-            <span class="pmx-selector__blockLabel">Contain</span>
-            <span class="pmx-selector__blockField">Field</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">ބ</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Contain</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Field</span>
           </div>
         </div>
       </div>
@@ -157,10 +157,10 @@ permalink: /components
     <div class="field__value">
 
       <div class="pmx-selector pmx-selector--readonly">
-        <div class="pmx-selector__value">
+        <div class="pmx-selector__item">
           <div class="pmx-selector__block">
-            <span class="pmx-selector__blockLabel">Assigned to</span>
-            <span class="pmx-selector__blockField">Nick De Jaeger</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Assigned to</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Nick De Jaeger</span>
           </div>
         </div>
       </div>
@@ -174,10 +174,10 @@ permalink: /components
     <div class="field__value">
 
       <div class="pmx-selector pmx-selector--readonly">
-        <div class="pmx-selector__value">
+        <div class="pmx-selector__item">
           <div class="pmx-selector__block">
-            <span class="pmx-selector__blockLabel">Title</span>
-            <span class="pmx-selector__blockField">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Title</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</span>
           </div>
         </div>
       </div>
