--- a/pages/itembox.html
+++ b/pages/itembox.html
@@ -70,7 +70,7 @@ permalink: /itembox
                     <div class="pmx-selector pmx-selector--expanded pmx-selector--singleSelect">
                       <div class="pmx-selector__value pmx-selector__value--selected">
                         <div class="pmx-selector__block">
-                          <span class="pmx-selector__block">11/17/2017</span>
+                          <span class="pmx-selector__blockPart pmx-selector__blockPart--field">11/17/2017</span>
                         </div>
                       </div>
                     </div>
@@ -96,7 +96,7 @@ permalink: /itembox
                     <div class="pmx-selector pmx-selector--expanded pmx-selector--singleSelect">
                       <div class="pmx-selector__value pmx-selector__value--selected">
                         <div class="pmx-selector__block">
-                          <span class="pmx-selector__blockField">11/17/2017</span>
+                          <span class="pmx-selector__blockPart pmx-selector__blockPart--field">11/17/2017</span>
                         </div>
                       </div>
                     </div>
@@ -170,22 +170,22 @@ permalink: /itembox
                           <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect">
                             <div class="pmx-selector__value pmx-selector__value--selected">
                               <div class="pmx-selector__block">
-                                <span class="pmx-selector__blockField">UI/UX</span>
+                                <span class="pmx-selector__blockPart pmx-selector__blockPart--field">UI/UX</span>
                               </div>
                             </div>
                             <div class="pmx-selector__value">
                               <div class="pmx-selector__block">
-                                <span class="pmx-selector__blockField">Design</span>
+                                <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</span>
                               </div>
                             </div>
                             <div class="pmx-selector__value">
                               <div class="pmx-selector__block">
-                                <span class="pmx-selector__blockField">Front-end</span>
+                                <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Front-end</span>
                               </div>
                             </div>
                             <div class="pmx-selector__value pmx-selector__value--selected">
                               <div class="pmx-selector__block">
-                                <span class="pmx-selector__blockField">Important</span>
+                                <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Important</span>
                               </div>
                             </div>
                           </div>
