--- a/pages/mobile.html
+++ b/pages/mobile.html
@@ -22,14 +22,14 @@ permalink: /mobile
           <h2>1605-b54-pi-61025</h2>
           <div class="view-selector">
             <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect ">
-              <div class="pmx-selector__value pmx-selector__value--comments">
-                <div class="pmx-selector__label ">
-                  <span class="pmx-selector__icon " style=""></span> &#2343;
+              <div class="pmx-selector__item pmx-selector__item--comments">
+                <div class="pmx-selector__block ">
+                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix"></span> &#2343;
                 </div>
               </div>
-              <div class="pmx-selector__value pmx-selector__value--timeline">
-                <div class="pmx-selector__label ">
-                  <span class="pmx-selector__icon " style=""></span> &#2342;
+              <div class="pmx-selector__item pmx-selector__item--timeline">
+                <div class="pmx-selector__block ">
+                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix"></span> &#2342;
                 </div>
               </div>
             </div>
