--- a/pages/itembox.html
+++ b/pages/itembox.html
@@ -68,7 +68,7 @@ permalink: /itembox
                 <div class="itemBoxTable__bodyCellInner">
 
                     <div class="pmx-selector pmx-selector--expanded pmx-selector--singleSelect">
-                      <div class="pmx-selector__value pmx-selector__value--selected">
+                      <div class="pmx-selector__item pmx-selector__item--selected">
                         <div class="pmx-selector__block">
                           <span class="pmx-selector__blockPart pmx-selector__blockPart--field">11/17/2017</span>
                         </div>
@@ -94,7 +94,7 @@ permalink: /itembox
                 <div class="itemBoxTable__bodyCellInner">
 
                     <div class="pmx-selector pmx-selector--expanded pmx-selector--singleSelect">
-                      <div class="pmx-selector__value pmx-selector__value--selected">
+                      <div class="pmx-selector__item pmx-selector__item--selected">
                         <div class="pmx-selector__block">
                           <span class="pmx-selector__blockPart pmx-selector__blockPart--field">11/17/2017</span>
                         </div>
@@ -168,22 +168,22 @@ permalink: /itembox
                       <div class="itemBoxTable__bodyCellInner">
 
                           <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect">
-                            <div class="pmx-selector__value pmx-selector__value--selected">
+                            <div class="pmx-selector__item pmx-selector__item--selected">
                               <div class="pmx-selector__block">
                                 <span class="pmx-selector__blockPart pmx-selector__blockPart--field">UI/UX</span>
                               </div>
                             </div>
-                            <div class="pmx-selector__value">
+                            <div class="pmx-selector__item">
                               <div class="pmx-selector__block">
                                 <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</span>
                               </div>
                             </div>
-                            <div class="pmx-selector__value">
+                            <div class="pmx-selector__item">
                               <div class="pmx-selector__block">
                                 <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Front-end</span>
                               </div>
                             </div>
-                            <div class="pmx-selector__value pmx-selector__value--selected">
+                            <div class="pmx-selector__item pmx-selector__item--selected">
                               <div class="pmx-selector__block">
                                 <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Important</span>
                               </div>
