added first version of filter function for tagpicker

--- a/pages/colorpicker.html
+++ b/pages/colorpicker.html
@@ -14,3 +14,4 @@ permalink: /tag
 
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
