--- a/pages/itembox.html
+++ b/pages/itembox.html
@@ -15,3 +15,4 @@ permalink: /itembox
 
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
