--- a/pages/colorpicker.html
+++ b/pages/colorpicker.html
@@ -4,8 +4,43 @@ title: Colorpicker
 permalink: /tag
 ---
 
-{% include popups/colorPicker-children.html %}
+<div class="field-container">
+  <div class="field">
+    <div class="field__label">Tags</div>
+    <div class="field__value">
 
+      <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect MULTISELECT__POPUP" data-popid="#multiSelector-3">
+        <div class="pmx-selector__item pmx-selector__item--selected">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Xamarin</span>
+          </div>
+        </div>
+        <div class="pmx-selector__item ">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: blue;">܌</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">WaitingIT</span>
+          </div>
+        </div>
+        <div class="pmx-selector__item ">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: orange;">܌</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">2013_Maintenance</span>
+          </div>
+        </div>
+        <div class="pmx-selector__item ">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: red;">܌</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">workaround_available</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+{% include popups/colorPicker-children.html %}
 
 <!-- COMPONENTS -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
