--- a/pages/components.html
+++ b/pages/components.html
@@ -194,3 +194,4 @@ permalink: /components
 <!-- COMPONENTS -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/toggle.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
