--- a/pages/colorpicker.html
+++ b/pages/colorpicker.html
@@ -12,28 +12,34 @@ permalink: /tag
       <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect MULTISELECT__POPUP" data-popid="#multiSelector-3">
         <div class="pmx-selector__item pmx-selector__item--selected">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">ग़</span>
+            <span class="pmx-selector__blockSeperator">•</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Xamarin</span>
           </div>
         </div>
+        <!--
         <div class="pmx-selector__item ">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: blue;">܌</span>
+            <span class="pmx-selector__blockSeperator">•</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">WaitingIT</span>
           </div>
         </div>
         <div class="pmx-selector__item ">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: orange;">܌</span>
+            <span class="pmx-selector__blockSeperator">•</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">2013_Maintenance</span>
           </div>
         </div>
         <div class="pmx-selector__item ">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: red;">܌</span>
+            <span class="pmx-selector__blockSeperator">•</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">workaround_available</span>
           </div>
         </div>
+        -->
       </div>
 
     </div>
