--- a/pages/components.html
+++ b/pages/components.html
@@ -139,10 +139,12 @@ permalink: /components
     <div class="field__value">
 
       <div class="pmx-selector pmx-selector--readonly">
-        <div class="pmx-selector__item pmx-selector__item--selected">
+        <div class="pmx-selector__item">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">ބ</span>
+            <span class="pmx-selector__blockSeperator">•</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Contain</span>
+            <span class="pmx-selector__blockSeperator">•</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Field</span>
           </div>
         </div>
@@ -157,9 +159,10 @@ permalink: /components
     <div class="field__value">
 
       <div class="pmx-selector pmx-selector--readonly">
-        <div class="pmx-selector__item pmx-selector__item--selected">
+        <div class="pmx-selector__item">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Assigned to</span>
+            <span class="pmx-selector__blockSeperator">•</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Nick De Jaeger</span>
           </div>
         </div>
@@ -174,9 +177,10 @@ permalink: /components
     <div class="field__value">
 
       <div class="pmx-selector pmx-selector--readonly">
-        <div class="pmx-selector__item pmx-selector__item--selected">
+        <div class="pmx-selector__item">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Title</span>
+            <span class="pmx-selector__blockSeperator">•</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</span>
           </div>
         </div>
