update class names

--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -7,12 +7,12 @@ permalink: /pmx
 <div class="app cf document__info--visible">
   <div class="app__overlay"></div>
 
-  <div class="app__nav__wrapper">
+  <div class="app-navigator">
     {% include blocks/app-nav.html %}
   </div>
 
-  <div class="notifications">
-    {% include blocks/notifications.html %}
+  <div class="user-menu">
+    {% include blocks/user-menu.html %}
   </div>
 
   <main class="app__container">
