--- a/pages/_TRASH/mobile.html
+++ b/pages/_TRASH/mobile.html
@@ -5,8 +5,9 @@ permalink: /mobile
 
 <!DOCTYPE html>
 <html lang="en-us">
-{% include head.html %}
-
+<head>
+  {% include head.html %}
+</head>
 
 <body class="mobile">
   <header class="mobile__header">
@@ -77,7 +78,7 @@ permalink: /mobile
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/jquery.sticky.js"></script>
   <!-- END -->
 
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/toggle.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/toggle-panels.js"></script>
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/mobile.js"></script>
 </body>
 
