--- a/pages/tag-picker.html
+++ b/pages/tag-picker.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Colorpicker
+title: Tag-picker
 permalink: /tag
 ---
 
@@ -47,14 +47,3 @@ permalink: /tag
 </div>
 
 {% include popups/colorPicker-children.html %}
-
-<!-- COMPONENTS -->
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newSimpleSelect.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/toggle.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/colorselector.js"></script>
-
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
