--- a/pages/colorpicker.html
+++ b/pages/colorpicker.html
@@ -44,6 +44,8 @@ permalink: /tag
 
 <!-- COMPONENTS -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newSimpleSelect.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/toggle.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/colorselector.js"></script>
 
