--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -29,7 +29,7 @@ permalink: /pmx
     {% include popups/new-multiselect.html %}
 
     <div class="footer-container">
-        <div class="footer" style="position: relative; top: -44px;">
+        <div class="footer">
             <p><a href="http://www.tenforce.com/" title="This is a TenForce product" target="_blank" tabindex="-1"></a></p>
         </div>
     </div>
