Pmx: new-multiselect now uses Id new-multiselect

--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -27,6 +27,7 @@ permalink: /pmx
     {% include blocks/old-pmx-table.html %}
 
     {% include popups/new-multiselect.html %}
+    {% include popups/multiSelector2.html %}
 
     <div class="footer-container">
         <div class="footer">
