Refactor: multiSelector2 -> multiselector-columnpicker

--- a/pages/itembox.html
+++ b/pages/itembox.html
@@ -6,4 +6,4 @@ permalink: /itembox
 
 {% include blocks/itembox.html %}
 
-{% include popups/multiSelector2.html %}
+{% include popups/multiSelector-columnpicker.html %}
