--- a/pages/tag-picker.html
+++ b/pages/tag-picker.html
@@ -11,35 +11,26 @@ permalink: /tag
 
       <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect MULTISELECT__POPUP" data-popid="#multiSelector-tagpicker">
         <div class="pmx-selector__item pmx-selector__item--selected">
-          <div class="pmx-selector__block ">
+          <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">ग़</span>
             <span class="pmx-selector__blockSeperator">•</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Xamarin</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">xamarin_tablet</span>
           </div>
         </div>
-        <!--
-        <div class="pmx-selector__item ">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: blue;">܌</span>
-            <span class="pmx-selector__blockSeperator">•</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">WaitingIT</span>
-          </div>
-        </div>
-        <div class="pmx-selector__item ">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: orange;">܌</span>
+        <div class="pmx-selector__item pmx-selector__item--selected">
+          <div class="pmx-selector__block">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #f4ca16;">ग़</span>
             <span class="pmx-selector__blockSeperator">•</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">2013_Maintenance</span>
           </div>
         </div>
-        <div class="pmx-selector__item ">
-          <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: red;">܌</span>
+        <div class="pmx-selector__item pmx-selector__item--selected">
+          <div class="pmx-selector__block">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #e30022;">ग़</span>
             <span class="pmx-selector__blockSeperator">•</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">workaround_available</span>
           </div>
         </div>
-        -->
       </div>
 
     </div>
