--- a/pages/components.html
+++ b/pages/components.html
@@ -24,7 +24,7 @@ permalink: /components
 
 <div class="field-container">
   <div class="field">
-    <div class="field__label">Tags ܐ Multi Select - expanded</div>
+    <div class="field__label">Tags ܐ Multi Select - collapsed</div>
     <div class="field__value">
       {% include components/selectors/collapsed/teams.html %}
     </div>
@@ -51,18 +51,9 @@ permalink: /components
 
 <div class="field-container">
   <div class="field">
-    <div class="field__label">Teams ܐ Multi Select - collapsed</div>
-    <div class="field__value">
-      {% include components/selectors/expanded/tags.html %}
-    </div>
-  </div>
-</div>
-
-<div class="field-container">
-  <div class="field">
     <div class="field__label">Teams ܐ Multi Select - expanded</div>
     <div class="field__value">
-      {% include components/selectors/expanded/teams.html %}
+      {% include components/selectors/expanded/tags.html %}
     </div>
   </div>
 </div>
