--- a/pages/pmx-item-detail.html
+++ b/pages/pmx-item-detail.html
@@ -4,7 +4,7 @@ title: Item detail
 permalink: /pmx-detail
 ---
 
-<div class="app cf document__info--visible">
+<div class="app cf item-progress--visible">
   <div class="app__overlay"></div>
 
   <div class="app-navigator">
