--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -4,7 +4,7 @@ title: Old App
 permalink: /pmx
 ---
 
-<div class="app cf document__info--visible">
+<div class="app cf item-progress--visible">
   <div class="app__overlay"></div>
 
   <div class="app-navigator">
