Selector: added JS_selector

--- a/pages/components.html
+++ b/pages/components.html
@@ -9,7 +9,7 @@ permalink: /components
     <div class="field__label">Due date ܐ Single Select - collapsed</div>
     <div class="field__value">
 
-      <div class="pmx-selector pmx-selector--collapsed">
+      <div class="pmx-selector JS_selector pmx-selector--collapsed">
         <div class="pmx-selector__item pmx-selector__item--selected">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">11/17/2017</span>
@@ -26,7 +26,7 @@ permalink: /components
     <div class="field__label">Status ܐ Single Select - collapsed</div>
     <div class="field__value">
 
-      <div class="pmx-selector pmx-selector--collapsed MULTISELECT__POPUP" data-popid="#multiSelector-1">
+      <div class="pmx-selector JS_selector pmx-selector--collapsed MULTISELECT__POPUP" data-popid="#multiSelector-1">
         <div class="pmx-selector__item pmx-selector__item--selected">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
@@ -45,7 +45,7 @@ permalink: /components
     <div class="field__label">Tags ܐ Multi Select - collapsed</div>
     <div class="field__value">
 
-      <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect MULTISELECT__POPUP" data-popid="#multiSelector-3">
+      <div class="pmx-selector JS_selector pmx-selector--collapsed pmx-selector--multiSelect MULTISELECT__POPUP" data-popid="#multiSelector-3">
         <div class="pmx-selector__item pmx-selector__item--selected">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">ग़</span>
@@ -78,7 +78,7 @@ permalink: /components
     <div class="field__label">Billable ܐ Single Select - expanded</div>
     <div class="field__value">
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
+      <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--toggleSelect">
         <div class="pmx-selector__item">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">܌</span>
@@ -100,7 +100,7 @@ permalink: /components
     <div class="field__label">Status ܐ Single Select - expanded</div>
     <div class="field__value">
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
+      <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--toggleSelect">
         <div class="pmx-selector__item">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Not started</span>
@@ -127,7 +127,7 @@ permalink: /components
     <div class="field__label">Teams ܐ Multi Select - expanded</div>
     <div class="field__value">
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect">
+      <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--multiSelect">
         <div class="pmx-selector__item pmx-selector__item--selected">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">܌</span>
@@ -150,7 +150,7 @@ permalink: /components
           </div>
         </div>
       </div>
-      
+
     </div>
   </div>
 </div>
@@ -159,7 +159,7 @@ permalink: /components
   <div class="field">
     <div class="field__label">Unselectable Single Select - expanded</div>
     <div class="field__value">
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect JS_pmx-selector--changeIcons">
+      <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--toggleSelect JS_pmx-selector--changeIcons">
         <div class="pmx-selector__item">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">-</span>
@@ -179,7 +179,7 @@ permalink: /components
   <div class="field">
     <div class="field__label">Tablet view selector ܐ Unselectable Single Select - expanded</div>
     <div class="field__value">
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
+      <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--toggleSelect">
         <div class="pmx-selector__item">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ध</span>
@@ -199,7 +199,7 @@ permalink: /components
   <div class="field">
     <div class="field__label">Mobile view selector ܐ Single Select - Expanded</div>
     <div class="field__value">
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
+      <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--toggleSelect">
         <div class="pmx-selector__item">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ध</span>
