Selector: JS_SelectorItem

--- a/pages/components.html
+++ b/pages/components.html
@@ -160,12 +160,12 @@ permalink: /components
     <div class="field__label">Unselectable Single Select - expanded</div>
     <div class="field__value">
       <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--toggleSelect JS_pmx-selector--changeIcons">
-        <div class="pmx-selector__item">
+        <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">-</span>
           </div>
         </div>
-        <div class="pmx-selector__item pmx-selector__item--selected">
+        <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ބ</span>
           </div>
@@ -180,12 +180,12 @@ permalink: /components
     <div class="field__label">Tablet view selector ܐ Unselectable Single Select - expanded</div>
     <div class="field__value">
       <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--toggleSelect">
-        <div class="pmx-selector__item">
+        <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ध</span>
           </div>
         </div>
-        <div class="pmx-selector__item pmx-selector__item--selected">
+        <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">द</span>
           </div>
@@ -199,19 +199,19 @@ permalink: /components
   <div class="field">
     <div class="field__label">Mobile view selector ܐ Single Select - Expanded</div>
     <div class="field__value">
-      <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--toggleSelect">
-        <div class="pmx-selector__item">
+      <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--required pmx-selector--toggleSelect">
+        <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ध</span>
           </div>
         </div>
-        <div class="pmx-selector__item">
+        <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">च</span>
           </div>
         </div>
 
-        <div class="pmx-selector__item pmx-selector__item--selected">
+        <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
           <div class="pmx-selector__block">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">द</span>
           </div>
