update search/filter fields to framework

--- a/pages/components.html
+++ b/pages/components.html
@@ -8,7 +8,15 @@ permalink: /components
   <div class="field">
     <div class="field__label">Due date ܐ Single Select - collapsed</div>
     <div class="field__value">
-      {% include components/selectors/collapsed/date.html %}
+
+      <div class="pmx-selector pmx-selector--collapsed">
+        <div class="pmx-selector__item pmx-selector__item--selected">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">11/17/2017</span>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
@@ -17,7 +25,17 @@ permalink: /components
   <div class="field">
     <div class="field__label">Status ܐ Single Select - collapsed</div>
     <div class="field__value">
-      {% include components/selectors/collapsed/status.html %}
+
+      <div class="pmx-selector pmx-selector--collapsed MULTISELECT__POPUP" data-popid="#multiSelector-1">
+        <div class="pmx-selector__item pmx-selector__item--selected">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
+            <span class="pmx-selector__blockSeperator">•</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field JS_pmx-selector__blockPart--label">Not started</span>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
@@ -26,7 +44,31 @@ permalink: /components
   <div class="field">
     <div class="field__label">Tags ܐ Multi Select - collapsed</div>
     <div class="field__value">
-      {% include components/selectors/collapsed/teams.html %}
+
+      <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect MULTISELECT__POPUP" data-popid="#multiSelector-3">
+        <div class="pmx-selector__item pmx-selector__item--selected">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">ग़</span>
+            <span class="pmx-selector__blockSeperator">•</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">dev-team</span>
+          </div>
+        </div>
+        <div class="pmx-selector__item pmx-selector__item--selected">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #00bfff;">ग़</span>
+            <span class="pmx-selector__blockSeperator">•</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
+          </div>
+        </div>
+        <div class="pmx-selector__item pmx-selector__item--selected">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #f4ca16;">ग़</span>
+            <span class="pmx-selector__blockSeperator">•</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">critical</span>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
@@ -35,7 +77,20 @@ permalink: /components
   <div class="field">
     <div class="field__label">Billable ܐ Single Select - expanded</div>
     <div class="field__value">
-      {% include components/selectors/expanded/billable.html %}
+
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
+        <div class="pmx-selector__item">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">܌</span>
+          </div>
+        </div>
+        <div class="pmx-selector__item pmx-selector__item--selected">
+          <div class="pmx-selector__block">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: red;">ܐ</span>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
@@ -44,7 +99,25 @@ permalink: /components
   <div class="field">
     <div class="field__label">Status ܐ Single Select - expanded</div>
     <div class="field__value">
-      {% include components/selectors/expanded/status.html %}
+
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
+        <div class="pmx-selector__item">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Not started</span>
+          </div>
+        </div>
+        <div class="pmx-selector__item pmx-selector__item--selected">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</span>
+          </div>
+        </div>
+        <div class="pmx-selector__item">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Done</span>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
@@ -53,7 +126,31 @@ permalink: /components
   <div class="field">
     <div class="field__label">Teams ܐ Multi Select - expanded</div>
     <div class="field__value">
-      {% include components/selectors/expanded/tags.html %}
+
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect">
+        <div class="pmx-selector__item pmx-selector__item--selected">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">܌</span>
+            <span class="pmx-selector__blockSeperator">•</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad X</span>
+          </div>
+        </div>
+        <div class="pmx-selector__item">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #00bfff;">܌</span>
+            <span class="pmx-selector__blockSeperator">•</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Y</span>
+          </div>
+        </div>
+        <div class="pmx-selector__item pmx-selector__item--selected">
+          <div class="pmx-selector__block ">
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #f4ca16;">܌</span>
+            <span class="pmx-selector__blockSeperator">•</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Z</span>
+          </div>
+        </div>
+      </div>
+      
     </div>
   </div>
 </div>
@@ -181,7 +278,5 @@ permalink: /components
   </div>
 </div>
 
-<div class="devgrid"></div>
-
-{% include popups/multiSelector1.html %}
-{% include popups/multiSelector3.html %}
+{% include popups/multiSelector-status.html %}
+{% include popups/multiSelector-tags.html %}
