--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -17,7 +17,7 @@ permalink: /pmx
 
   <main class="app__container">
     <header class="app-header cf">
-      {% include blocks/app-header-no-breadcrumb.html %}
+      {% include blocks/app-header.html %}
     </header>
 
     {% include blocks/old-pmx-tabline.html %}
